--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json"
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "cd ../.. && pnpm build",
+  "outputDirectory": ".next",
+  "installCommand": "cd ../.. && pnpm install"
 }
