--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint ./app"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "next": "16.1.1",
@@ -14,11 +14,15 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^7.0.0",
+    "@eslint-react/eslint-plugin": "^2.5.7",
     "@types/node": "^22.19.6",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.26",
     "typescript": "^5.9.3"
   },
   "overrides": {
