--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,8 @@
   "globalDependencies": ["**/.env.*local"],
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
+      "cache" : true,
+      "dependsOn": ["^build", "lint"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {
