feat(web): add features page with inline components

--- a/apps/web/.vscode/settings.json
+++ b/apps/web/.vscode/settings.json
@@ -2,12 +2,8 @@
   // Disable the default formatter, use eslint instead
   "prettier.enable": false,
   "editor.formatOnSave": false,
-
-  // Auto fix
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit",
-    "source.organizeImports": "never"
-  },
+  "eslint.format.enable": true,
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
 
   // Silent the stylistic rules in your IDE, but still auto fix them
   "eslint.rules.customizations": [
