--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,21 +9,15 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@geniusgarage/ui": "workspace:^",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^7.0.0",
-    "@eslint-react/eslint-plugin": "^2.5.7",
     "@types/node": "^22.19.6",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "16.1.1",
-    "eslint-plugin-format": "^1.3.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.26",
     "typescript": "^5.9.3"
   },
   "overrides": {
