--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "geniusgarage",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.1.0",
+  "engines": {
+    "node": ">=24.11.1"
+  },
   "scripts": {
-    "turbo:dry-run": "echo '' &&  turbo build --dry-run",
+    "turbo:dry-run": "echo 'list order of build' &&  turbo build --dry-run",
     "turbo:list": "echo 'Verify the package is recognized' && pnpm list --depth 0",
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -11,11 +15,14 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^7.0.0",
+    "@eslint-react/eslint-plugin": "^2.5.7",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.1",
+    "eslint-plugin-format": "^1.3.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.26",
     "prettier": "^3.7.4",
     "turbo": "^2.7.4"
-  },
-  "packageManager": "pnpm@9.1.0",
-  "engines": {
-    "node": ">=24.11.1"
   }
 }
