--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "jsx": "react-jsx",
     "target": "ES2017",
+    "jsx": "react-jsx",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "strict": true,
+    "declaration": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "declaration": true
+    "skipLibCheck": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
