feat(ui): extract Button component with variants

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,14 @@
     "scss",
     "pcss",
     "postcss"
-  ]
+  ],
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  }
 }
