--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "exports": {
     ".": "./src/index.ts",
-    "./card": "./src/card.tsx"
+    "./card": "./src/card.tsx",
+    "./button": "./src/button.tsx"
   },
   "main": "./src/index.ts",
   "types": "./src/index.ts",
